--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.gycoding</groupId>
     <artifactId>quasar-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -21,6 +21,7 @@
         <maven-surefire.version>3.5.4</maven-surefire.version>
         <maven-compiler.version>3.14.0</maven-compiler.version>
 
+        <feign.version>4.3.0</feign.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.version>1.18.32</lombok.version>
     </properties>
@@ -63,6 +64,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${feign.version}</version>
         </dependency>
 
         <!-- Lombok Dependencies -->
